--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "codeceptjs": "^2.3.2",
+    "http-server": "^0.11.1",
     "puppeteer": "^1.20.0"
   },
   "scripts": {
     "codeceptjs-docs": "cd codeceptjs-docs/website && npm start",
+    "todomvc": "cd todomvc && http-server",
     "test": "codeceptjs run --steps"
   }
 }
